# tensortrace

./: .gitignore  CHANGELOG.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_V2.md  Dockerfile.moai-serve  HARDENING_REPORT.md  LICENSE  Makefile  PRODUCTION_READINESS.md  README.md  SECURITY.md  USER_GUIDE.md  alembic.ini  pyproject.toml  pyrightconfig.json  pytest.ini  qa_simulation_600.py  requirements.txt  verify_he.py
.github/workflows/: bench.yml  ci.yml  compliance-full.yml  qa.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_telemetry_and_rollout.py  003_fedmoe_experts.py
api/: enablement_service.py
bench/: bench_helora.py
benchmarks/: __init__.py  analyzer.py  baseline.json  config.py  generate_sample_results.py  http_bench.py  llama3_lora_benchmark.py  lora_peft_benchmark.py  production_benchmark.py  regression_test.py  resource_monitor.py  runner.py  telemetry_bench.py  tinker_sft_encryption_bench.py  unit_benchmark.py
configs/: agent_config.json
configs/bench/: hardware_profiles.yaml
configs/policy_packs/: baseline-evidence-pack.yaml  dp-sanity-pack.yaml  latency-sanity-pack.yaml  robotics-warehouse-pack.yaml  soc2-evidence-pack.yaml
data/synthetic/: trajectory.txt
demo_federation/: local_update.n2he
demo_fl_trust/: fl_evidence.json  update.json
demo_integration/: policy_head.moai
docker/: job-runner.Dockerfile
docker/bench/: Dockerfile
docker/platform/: Dockerfile
docs/: ARCHITECTURE.md  BASELINE.md  DASHBOARD_QA_REPORT.md  DEEP_DIVE.md  ENGINEERING_DEEP_DIVE.md  EXPERT_ROUTING.md  HSM_INTEGRATION.md  IMPLEMENTATION_PLAN.md  INTEGRATIONS.md  MATURITY.md  MOAI_INFERENCE_OVERVIEW.md  OPEN_CORE_BOUNDARIES.md  PEFT_STUDIO.md  PRD.md  PRIVACY_TINKER_SPEC.md  PRODUCTION_HARDENING_PLAN.md  PRODUCTION_READINESS.md  PROD_GAPS_REPORT.md  QUALITY_AND_BENCHMARKS.md  SECURITY_QA_REPORT.md  SYSTEM_AUDIT_PRD.md  TGSP_SPEC.md  TGSP_USAGE.md  edge_agent_quickstart.md  enterprise_deployment.md  index.md  installation.md  performance_benchmark_report.md  quickstart.md  research_benchmark_summary.md  rtpl.md
docs/api-reference/: configuration.md  exceptions.md  futures.md  service-client.md  training-client.md
docs/arch/: HE_LORA_ONLY.md
docs/architecture/: MODULE_MAP.md
docs/bench/: benchmark_matrix.md
docs/compliance/: CONTROL_MATRIX.md  DATA_FLOW.md  THREAT_MODEL.md
docs/cookbook/: README.md  encrypted-inference.md  lora-finetuning.md
docs/crypto/: N2HE_HEXL_BUILD.md  NO_TOY_HE.md
docs/guides/: privacy.md  sampling.md  training.md
docs/platform/: API_SPEC.md
docs/product/: PITCH.md  PRD_EDGE.md  PRD_PLATFORM.md  PRD_RTPL.md  PRD_TGSP.md
docs/quality/: PHASE7_STATIC_ANALYSIS.md
docs/release/: RELEASE_CHECKLIST.md
docs/results/: HELORA_BENCH.md
docs/runbooks/: identity_renewals.md
docs/runtime/: HE_LORA_CONTRACT.md
docs/security/: CRYPTO_REVIEW.md  ERROR_TAXONOMY.md
docs/triage/: PHASE0_BASELINE.md
examples/: demo_fl_tgsp_policy_evidence.py  demo_moai_tgsp_integration.py  demo_n2he_tgsp_federation.py  demo_tgsp_end_to_end.py  min_sft.py
examples/vercel_mock/: vercel.json
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.vue  main.js  style.css
runs/standalone/: evidence.json  manifest.json
scripts/: bench_lora_runtime.py  benchmark_fingerprinting.py  benchmark_peft_fl.py  build_n2he_hexl.sh  debug_auth_hash.py  demo_moai_flow.py  download_fastumi.py  download_real_data.py  edge_agent_run.sh  file_list.txt  gen_compliance_pack.py  generate_benchmark_images.py  generate_graphs.py  identity_demo.py  qa_report.py  qa_run.sh  test_platform.py  tgflow_ros2_ingest.py  tgflow_slice.py  verify_crypto.py  verify_hardened_pipeline.py  verify_he_backend.py  verify_install.sh  verify_unified_agent.py
scripts/bench/: __init__.py  build_report.py  run_benchmarks.py
scripts/compliance/: __init__.py  build_compliance_evidence.py  collect_privacy_security_metrics.py
scripts/evidence/: build_value_evidence.py
scripts/n2he/: build_n2he.sh  run_benchmark.py
scripts/qa/: test_matrix.py
scripts/release/: pre_release_check.py
src/tensorguard/: __init__.py  cli.py  errors.py  logging.py
src/tg_tinker/: __init__.py  client.py  config.py  exceptions.py  futures.py  schemas.py  training_client.py
tensafe/: __init__.py  inference.py
tensafe/cookbook/: __init__.py  completers.py  hyperparam_utils.py  model_info.py  tokenizer_utils.py
tensafe/core/: config.py
tensafe/he_lora/: __init__.py  backend.py  helora_adapter.py  noise_tracker.py  packing.py
tensafe/rlvr/: __init__.py
tests/: conftest.py  pentest_tgsp.py  test_edge_resilience.py  test_moai_flow.py  test_unified_fabric.py
tests/benchmarks/: __init__.py  test_performance_regression.py
tests/cookbook/: __init__.py  test_completers.py  test_eval_metrics.py  test_hyperparam_utils.py  test_model_info.py  test_renderers.py
tests/crypto/: __init__.py  test_no_toy_he.py
tests/e2e/: __init__.py  conftest.py  test_dashboard_ui.py  test_llama3_custom_loss_rlvr_e2e.py  test_llama3_sft_e2e.py  test_n2he_e2e.py
tests/fixtures/: sample_data.jsonl
tests/helora/: __init__.py  test_backend_is_real.py  test_noise_budget.py  test_rotation_budget.py  test_semantics.py
tests/integration/: test_bench_evidence.py  test_fastumi_fedmoe.py  test_fedmoe_system.py  test_platform_api.py  test_server_smoke.py  test_tgsp.py  test_tgsp_platform.py
tests/n2he/: __init__.py  test_n2he_adapter.py  test_n2he_contracts.py  test_n2he_core.py  test_n2he_inference.py  test_n2he_serialization.py
tests/peft/: test_catalog.py  test_run_simulated.py
tests/regression/: canonical_prompts.jsonl  conftest.py  test_privacy_invariants.py
tests/security/: test_crypto_tamper.py  test_error_handling.py  test_phase2_gates.py  test_platform_security.py  test_production_gates.py  test_quantum_safety.py  test_security_hardening.py  test_security_invariants.py  test_startup_validation.py
tests/unit/: test_client.py  (+12 more)
tests_quarantine/: README.md  test_tgsp_platform.py
tmp_keys/: moai_08655d61bc439e12.meta.json
(+309 files in other folders)
