[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tensorguard"
version = "2.3.0"
description = "Post-Quantum Secure MLOps Platform with Unified Evidence Fabric"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [
    {name = "TensorGuard Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["mlops", "federated-learning", "post-quantum", "cryptography", "security"]

# Core dependencies required for the platform
dependencies = [
    "fastapi>=0.104.0,<1.0.0",
    "uvicorn>=0.24.0,<1.0.0",
    "sqlmodel>=0.0.14,<1.0.0",
    "pydantic>=2.5.0,<3.0.0",
    "pydantic-settings>=2.1.0,<3.0.0",
    "cryptography>=41.0.0,<43.0.0",
    "requests>=2.31.0,<3.0.0",
    "numpy>=1.24.0,<2.0.0",
    # Authentication dependencies
    "python-jose[cryptography]>=3.3.0,<4.0.0",
    "passlib[argon2]>=1.7.4,<2.0.0",
    "argon2-cffi>=23.1.0,<24.0.0",
    # Serialization and database migration
    "msgpack>=1.0.0,<2.0.0",
    "alembic>=1.12.0,<2.0.0",
]

[project.optional-dependencies]
# Benchmarking and ML dependencies
bench = [
    "xgboost>=2.0.0,<3.0.0",
    "scikit-learn>=1.3.0,<2.0.0",
    "scipy>=1.11.0,<2.0.0",
    "psutil>=5.9.0,<6.0.0",
]

# Federated Learning dependencies
fl = [
    "flwr>=1.5.0,<2.0.0",
    "tenseal>=0.3.0,<1.0.0",
]

# ACME/Certificate management
acme = [
    "josepy>=1.14.0,<2.0.0",
]

# Post-Quantum Cryptography (requires liboqs native library)
# Install liboqs first: https://github.com/open-quantum-safe/liboqs
pqc = [
    "liboqs-python>=0.10.0",
]

# Development dependencies
dev = [
    "pytest>=7.4.0,<8.0.0",
    "pytest-asyncio>=0.21.0,<1.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "ruff>=0.1.0,<1.0.0",
    "mypy>=1.7.0,<2.0.0",
    "httpx>=0.25.0,<1.0.0",
]

# All optional dependencies
all = [
    "tensorguard[bench,fl,acme,pqc,dev]",
]

[project.urls]
Homepage = "https://github.com/tensorguard/tensorguardflow"
Documentation = "https://tensorguard.dev/docs"
Repository = "https://github.com/tensorguard/tensorguardflow"

[project.scripts]
tensorguard = "tensorguard.cli:main"
tg-agent = "tensorguard.agent.daemon:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "crypto: marks tests requiring cryptographic operations",
    "privacy: marks tests for privacy features",
    "compliance: marks tests for compliance features",
]

[tool.ruff]
line-length = 120
target-version = "py39"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.isort]
known-first-party = ["tensorguard"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
