[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tg-tinker"
version = "3.0.0"
description = "TG-Tinker: Privacy-First ML Training API with Differential Privacy, Encrypted Storage, and Post-Quantum Security"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [
    {name = "Daniel Foo"},
    {name = "TG-Tinker Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
keywords = [
    "differential-privacy",
    "ml-training",
    "privacy-preserving",
    "post-quantum-cryptography",
    "secure-ml",
    "encrypted-storage",
    "audit-logging",
]

dependencies = [
    # API Framework
    "fastapi>=0.104.0,<1.0.0",
    "uvicorn>=0.24.0,<1.0.0",
    "pydantic>=2.5.0,<3.0.0",
    "pydantic-settings>=2.1.0,<3.0.0",
    # Database
    "sqlmodel>=0.0.14,<1.0.0",
    # Cryptography
    "cryptography>=41.0.0,<43.0.0",
    # HTTP Client (SDK)
    "httpx>=0.25.0,<1.0.0",
    # Numeric
    "numpy>=1.24.0,<2.0.0",
    # Authentication
    "python-jose[cryptography]>=3.3.0,<4.0.0",
    "passlib[argon2]>=1.7.4,<2.0.0",
    "argon2-cffi>=23.1.0,<24.0.0",
    # Serialization
    "msgpack>=1.0.0,<2.0.0",
]

[project.optional-dependencies]
# Post-Quantum Cryptography (requires liboqs)
pqc = [
    "liboqs-python>=0.10.0",
]

# Benchmarking
bench = [
    "psutil>=5.9.0,<6.0.0",
    "scipy>=1.11.0,<2.0.0",
]

# Development
dev = [
    "pytest>=7.4.0,<8.0.0",
    "pytest-asyncio>=0.21.0,<1.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "ruff>=0.1.0,<1.0.0",
    "mypy>=1.7.0,<2.0.0",
]

# All dependencies
all = [
    "tg-tinker[pqc,bench,dev]",
]

[project.urls]
Homepage = "https://github.com/tg-tinker/tg-tinker"
Documentation = "https://tg-tinker.dev/docs"
Repository = "https://github.com/tg-tinker/tg-tinker"

[project.scripts]
tg-tinker-server = "tensorguard.platform.main:app"

[tool.setuptools.packages.find]
where = ["src"]
include = ["tensorguard*", "tg_tinker*"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow",
    "integration: integration tests",
    "unit: unit tests",
    "crypto: cryptographic operations",
    "privacy: privacy features",
    "regression: regression tests",
    "tg_tinker: TG-Tinker API tests",
]

[tool.ruff]
line-length = 120
target-version = "py39"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long
    "B008",  # function calls in argument defaults
]

[tool.ruff.isort]
known-first-party = ["tensorguard", "tg_tinker"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
