[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tensafe"
version = "3.0.0"
description = "TenSafe: Privacy-First ML Training API with Differential Privacy, Encrypted Storage, and Post-Quantum Security"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [
    {name = "Daniel Foo"},
    {name = "TenSafe Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
keywords = [
    "differential-privacy",
    "ml-training",
    "privacy-preserving",
    "post-quantum-cryptography",
    "secure-ml",
    "encrypted-storage",
    "audit-logging",
]

dependencies = [
    # API Framework
    "fastapi>=0.104.0,<1.0.0",
    "uvicorn>=0.24.0,<1.0.0",
    "pydantic>=2.5.0,<3.0.0",
    "pydantic-settings>=2.1.0,<3.0.0",
    # Database
    "sqlmodel>=0.0.14,<1.0.0",
    # Cryptography
    "cryptography>=41.0.0,<43.0.0",
    # HTTP Client (SDK)
    "httpx>=0.25.0,<1.0.0",
    # Numeric
    "numpy>=1.24.0,<2.0.0",
    # Authentication
    "python-jose[cryptography]>=3.3.0,<4.0.0",
    "passlib[argon2]>=1.7.4,<2.0.0",
    "argon2-cffi>=23.1.0,<24.0.0",
    # Serialization
    "msgpack>=1.0.0,<2.0.0",
]

[project.optional-dependencies]
# Post-Quantum Cryptography (requires liboqs)
pqc = [
    "liboqs-python>=0.10.0",
]

# Server/Platform dependencies
server = [
    "sqlmodel>=0.0.14,<1.0.0",
    "alembic>=1.12.0",
    "python-multipart>=0.0.6",
]

# Benchmarking
bench = [
    "psutil>=5.9.0,<6.0.0",
    "scipy>=1.11.0,<2.0.0",
    "scikit-learn>=1.3.0,<2.0.0",
]

# Federated Learning (optional heavy dependencies)
fl = [
    "flwr>=1.5.0,<2.0.0",
    "tenseal>=0.3.0,<1.0.0",
]

# Development
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

# All dependencies
all = [
    "tensafe[pqc,server,bench,fl,dev]",
]

[project.urls]
Homepage = "https://github.com/tensafe/tensafe"
Documentation = "https://tensafe.dev/docs"
Repository = "https://github.com/tensafe/tensafe"

[project.scripts]
tensafe-server = "tensorguard.platform.main:app"

[tool.setuptools.packages.find]
where = ["src"]
include = ["tensorguard*", "tg_tinker*"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow",
    "integration: integration tests",
    "unit: unit tests",
    "crypto: cryptographic operations",
    "privacy: privacy features",
    "regression: regression tests",
    "tensafe: TenSafe API tests",
]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long
    "E701",  # Multiple statements on one line - guard clauses
    "B008",  # function calls in argument defaults
    "B007",  # Loop control variable not used - enumerate patterns
    "UP006", # Use `X` instead of `typing.X` - allow for Python 3.9 compat
    "UP035", # `typing.X` is deprecated - allow for Python 3.9 compat
    "E402",  # Module level import not at top - needed for conditional imports
    "B904",  # Within an `except` clause, raise with `from` - pre-existing
    "W291",  # Trailing whitespace - auto-fixable
    "W293",  # Blank line contains whitespace - auto-fixable
    "F403",  # Star imports - needed for SQLModel registration
    "F841",  # Local variable assigned but never used - pre-existing code
]

[tool.ruff.lint.isort]
known-first-party = ["tensorguard", "tg_tinker"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
